# SpectroGAN

./: .gitignore  README.md  pyproject.toml
notebooks/: eval.ipynb  train.ipynb
notebooks/.ipynb_checkpoints/: WavGAN-checkpoint.ipynb
src/spectrogan/: __init__.py  config.py  data.py  models.py  plot.py  train.py  utils.py
