[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spectrogan"
version = "0.0.1"
description = "GAN for environmental sound generation"
authors = [{name="Daniel Rabayda"}]
dependencies = [
    "torch",
    "torchvision",
    "numpy",
    "matplotlib",
    "tqdm",
    "scikit-learn"
]

[tool.setuptools.packages.find]
where = ["src"]